// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner renders 1`] = `
<div
  className="sc-ibkoSk cUYSGy"
>
  <div
    className="sc-gZVZiL cpDtKq"
  >
    <div
      className="sc-keiIcO kbDdQF"
    >
      <div
        className="sc-laFCIP hWmyeq"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-EmgEd jjawzM"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-dhyxXW DFqrx"
  />
</div>
`;

exports[`Banner renders in mobile mode 1`] = `
<div
  className="sc-ibsmuj dKBmJH"
>
  <div
    className="sc-gZhsbI iWUurw"
  >
    <div
      className="sc-kerCdx byxckT"
    >
      <div
        className="sc-laxFgQ edUeFl"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-EdmDu bkKoak"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-dhaItB mqTnK"
  >
    <span>
      <button
        className="sc-lbtWl LKBph"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Discard
        <div
          className="sc-jNVCqq iQheEd"
        />
      </button>
    </span>
    <span>
      <button
        className="sc-lbtWl hGgAai"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Confirm
        <div
          className="sc-jNVCqq iQheEd"
        />
      </button>
    </span>
  </div>
</div>
`;

exports[`Banner renders in single line mode 1`] = `
<div
  className="sc-ibsmuj iTTpRA"
>
  <div
    className="sc-gZhsbI jgSBgR"
  >
    <div
      className="sc-EdmDu gGwjSu"
    >
      Your email is not verified. Verify to enable withdrawals.
    </div>
    <div
      className="sc-dhaItB mqTnK"
    >
      <button
        className="sc-lbtWl YxgFW"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Resend verification link to email ›
        <div
          className="sc-jNVCqq iQheEd"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Banner renders with buttons 1`] = `
<div
  className="sc-ibsmuj kbtLwC"
>
  <div
    className="sc-gZhsbI iWUurw"
  >
    <div
      className="sc-kerCdx byxckT"
    >
      <div
        className="sc-laxFgQ edUeFl"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-EdmDu bkKoak"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-dhaItB mqTnK"
  >
    <span>
      <button
        className="sc-lbtWl LKBph"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Discard
        <div
          className="sc-jNVCqq iQheEd"
        />
      </button>
    </span>
    <span>
      <button
        className="sc-lbtWl hGgAai"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Confirm
        <div
          className="sc-jNVCqq iQheEd"
        />
      </button>
    </span>
  </div>
</div>
`;

exports[`Banner renders with buttons RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="sc-ibsmuj kbtLwC"
  >
    <div
      className="sc-gZhsbI iWUurw"
    >
      <div
        className="sc-kerCdx byxckT"
      >
        <div
          className="sc-laxFgQ edUeFl"
        >
          Title here
        </div>
      </div>
      <div
        className="sc-EdmDu bkKoak"
      >
        Lorem ipsum dolor...
      </div>
    </div>
    <div
      className="sc-dhaItB mqTnK"
    >
      <span>
        <button
          className="sc-lbtWl LKBph"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Discard
          <div
            className="sc-jNVCqq iQheEd"
          />
        </button>
      </span>
      <span>
        <button
          className="sc-lbtWl hGgAai"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Confirm
          <div
            className="sc-jNVCqq iQheEd"
          />
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`Banner renders with header icon 1`] = `
<div
  className="sc-ibkoSk cUYSGy"
>
  <div
    className="sc-gZVZiL cpDtKq"
  >
    <div
      className="sc-keiIcO kbDdQF"
    >
      <div
        className="sc-laFCIP hWmyeq"
      >
        Title here
      </div>
      <div
        className="sc-iRaSfU lhfXBo"
      >
        <svg
          className="sc-gSAPjG"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </div>
    </div>
    <div
      className="sc-EmgEd jjawzM"
    >
      Lorem ipsum dolor...
    </div>
  </div>
</div>
`;
